--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,32 @@ services:
     #  interval: 5s
     #  timeout: 5s
     #  retries: 20
+  kafka:
+    image: confluentinc/cp-kafka:7.2.1
+    container_name: helpmebuy-kafka
+    ports:
+      - "9092:9092"
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT
+      - KAFKA_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+      - KAFKA_NUM_PARTITIONS=1
+    depends_on:
+      - zookeeper
+    volumes:
+      - ./kafka/data:/var/lib/kafka/data
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.2.1
+    container_name: helpmebuy-zookeeper
+    ports:
+      - "2181:2181"
+    environment:
+      - ZOOKEEPER_CLIENT_PORT=2181
+      - ZOOKEEPER_TICK_TIME=2000
+      - ZOOKEEPER_SERVER_ID=1
+    volumes:
+      - ./zookeeper/data:/var/lib/zookeeper/data
+      - ./zookeeper/log:/var/lib/zookeeper/log
