--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,11 @@ services:
       - ./localstack/init:/etc/localstack/init/ready.d
       - ./localstack/data:/var/lib/localstack
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:4566/health" ]
+      test: ["CMD-SHELL", "awslocal s3 ls > /dev/null 2>&1 || exit 1"]
       interval: 5s
       timeout: 5s
-      retries: 20
+      retries: 60
+      start_period: 30s
     #healthcheck:
     #  test: ["CMD", "/bin/bash", "-c", "awslocal s3 ls >/dev/null 2>&1"]
     #  interval: 5s
@@ -39,6 +40,7 @@ services:
       - zookeeper
     volumes:
       - ./kafka/data:/var/lib/kafka/data
+      - kafka_secrets:/etc/kafka/secrets
   zookeeper:
     image: confluentinc/cp-zookeeper:7.2.1
     container_name: helpmebuy-zookeeper
@@ -51,3 +53,29 @@ services:
     volumes:
       - ./zookeeper/data:/var/lib/zookeeper/data
       - ./zookeeper/log:/var/lib/zookeeper/log
+      - zookeeper_secrets:/etc/zookeeper/secrets
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:latest
+    container_name: helpmebuy-keycloak
+    ports:
+      - "8081:8080"  # Changed to 8081 to avoid conflict with Ktor APIs
+      - "9000:9000"
+    environment:
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin
+      - KC_HTTP_MANAGEMENT_ENABLED=true
+      - KC_HTTP_MANAGEMENT_PORT=9000
+      - KC_HEALTH_ENABLED=true
+    command: start-dev
+    volumes:
+      - ./keycloak/data:/opt/keycloak/data
+    healthcheck:
+      test: ["CMD-SHELL", "bash -lc 'exec 3<>/dev/tcp/127.0.0.1/9000 && printf \"GET /health/ready HTTP/1.0\\r\\nHost: localhost\\r\\n\\r\\n\" >&3 && head -n1 <&3 | grep -q 200'"]
+      interval: 5s
+      timeout: 5s
+      retries: 60
+      start_period: 45s
+volumes:
+  kafka_secrets:
+  zookeeper_secrets:
