--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -5,3 +5,9 @@ networkTimeout=10000
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+
+# Gradle daemon memory
+org.gradle.jvmargs=-Xmx6g -Xms1g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8 -XX:+HeapDumpOnOutOfMemoryError
+
+# Kotlin compiler daemon memory (helps with KMP/Compose)
+kotlin.daemon.jvm.options=-Xmx5g,-XX:MaxMetaspaceSize=1g
