--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,9 @@
 #Kotlin
 kotlin.code.style=official
-kotlin.daemon.jvmargs=-Xmx3072M
+kotlin.daemon.jvmargs=-Xmx4096M
+#kotlin.daemon.jvm.options=-Xmx5g,-XX:MaxMetaspaceSize=1g
+# Gradle daemon JVM (the build process)
+#org.gradle.jvmargs=-Xmx6g -Xms1g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8 -XX:+HeapDumpOnOutOfMemoryError
 #Gradle
 org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
 org.gradle.configuration-cache=true
@@ -8,3 +11,6 @@ org.gradle.caching=true
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+
+# Optional: keep Kotlin using the daemon (recommended)
+#kotlin.compiler.execution.strategy=daemon
