cleaning more warnings

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 #Kotlin
 kotlin.code.style=official
-kotlin.daemon.jvmargs=-Xmx4096M
+kotlin.daemon.jvmargs=-Xmx6g
 #kotlin.daemon.jvm.options=-Xmx5g,-XX:MaxMetaspaceSize=1g
 # Gradle daemon JVM (the build process)
 #org.gradle.jvmargs=-Xmx6g -Xms1g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8 -XX:+HeapDumpOnOutOfMemoryError
